# CDE

./: CMakeLists.txt  ai.cpp  ai.h  army.cpp  army.h  buildings.cpp  buildings.h  color.cpp  color.h  defender.cpp  defender.h  launch  main.cpp  map.cpp  map.h  other.h  player.cpp  player.h  random.h  tiles.cpp  tiles.h  ui.cpp  ui.h  units.cpp  units.h  архитектура
maps/: hannibal_1
архитектура/: my.uml  representations.aird  архитектура  архитектура_3
